# dl_lecture_competition_pub

./: .gitignore  .python-version  main.py  pyproject.toml
configs/: config.yaml
src/: datasets.py  models.py  transformer.py
